# opencv-yolo

./: .gitignore  CMakeLists.txt  build.sh  event_detection.hpp  main.cpp  main.origin.cpp  yolo origin.hpp  yolo.hpp  yolov5.cpp
utils/: common.hpp  safe_queue.hpp
